2007-10-28  Lars Clausen  <lars@raeder.dk>

	* app/display.c (ddisplay_do_update_menu_sensitivity): Check for
	existence of display before updating menus.

	* app/diagram.c (diagram_update_menu_sensitivity): 
	* app/menus.c: 
	* app/menus.h (struct _UpdatableMenuItems): 
	* app/undo.[ch]: Add support for desensitizing the Undo/Redo menu
	items. 

	* installer/rpm/dia.spec.fedora-core-6: 
	* data/dia-splash.png
	* data/Makefile.am
	* data/icons/*:
	* makefile.msc: 
	* app/splash.c (get_logo_pixmap): 
	* app/interface.c (create_toolbox): 
	* app/Makefile.am: 
	* app/makefile.msc: 
	* dia.desktop.in.in: 
	* app/commands.c: Patch from Michael Monreal
	<michael.monreal@gmx.net>: Move image data into data directory and
	use SVG where possible.	Fixes bug #463115.

	* Makefile.am (CLEANFILES): 
	* configure.in: 
	* dia.keys.in: Use Automake to generate dia.keys rather than a
	hack.  Part of fix of bug #463115.

	* lib/dia_image.c (dia_image_get_broken): Use stock image for
	broken image.  Fixes bug #172304.

2007-10-27  Lars Clausen  <lars@raeder.dk>

	* app/interface.c (create_sheet_dropdown_menu): Follow-up on bug
	#442309: Since flowchart is the default start-up sheet now, put it
	in the always-there list.

	* shapes/Assorted/arrow-chevron.shape: 
	* shapes/Assorted/arrow-down.shape: 
	* shapes/Assorted/arrow-left-notched.shape: 
	* shapes/Assorted/arrow-left-right.shape: 
	* shapes/Assorted/arrow-left-right-up.shape: 
	* shapes/Assorted/arrow-left.shape: 
	* shapes/Assorted/arrow-pentagon.shape: 
	* shapes/Assorted/arrow-quad.shape: 
	* shapes/Assorted/arrow-right-notched.shape: 
	* shapes/Assorted/arrow-right.shape: 
	* shapes/Assorted/arrow-up-down-left.shape: 
	* shapes/Assorted/arrow-up-down.shape: 
	* shapes/Assorted/arrow-up.shape: 
	* shapes/Assorted/circle-quarter.shape: 
	* shapes/Assorted/circle.shape: 
	* shapes/Assorted/cross-maltese.shape: 
	* shapes/Assorted/cross-swiss.shape: 
	* shapes/Assorted/diamond.shape: 
	* shapes/Assorted/heart.shape: 